# rygel

./: Makefile.am  configure.ac  meson.build
data/xml/: meson.build
examples/: fullscreen-renderer.c
src/: meson.build
src/librygel-core/: meson.build
src/librygel-server/: rygel-data-sink.vala  rygel-http-server.vala
src/plugins/media-export/: rygel-media-export-dvd-parser.vala  rygel-media-export-dvd-track.vala
src/rygel/: Makefile.am  rygel-acl.vala  rygel-main.vala
